[package]
name = "spx"
version = "0.1.0"
edition = "2024"

[dependencies]
ffmpeg-sys-next = "8.1.0"
tempfile = "3.27.0"
log = "0.4.33"
crossbeam-queue = "0.3.13"
tokio-postgres = "0.7.18"
core_affinity = "0.8.3"
mimalloc = "0.1.52"
chrono = "0.4.45"
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
config = "0.15.25"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.4", features = ["v4"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-postgres-rustls = "0.14.0"
rustls = "0.23.41"
tracing = "0.1.44"
async-trait = "0.1.89"
async-nats = "0.49.1"
